#239 feat:adiciona suporte a filtros na listagem de execuções de checklist